--- a/index.html
+++ b/index.html
@@ -8,46 +8,91 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-<header class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Loja</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Produtos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contato</a>
+          </li>  
+        </ul>           
+      </div>
+    </div>
+</nav>
+<header class="container mt-5">
     <h1>Loja de Eletrônicos</h1>
 </header>
-<main class="container">
+<main class="container mt-4">
     <section>
         <h2>Produtos em Destaque</h2>
         <div class="row">
+          <div class="col-sm-4">
+            <div class="card">
+              <img src="img/computador.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Pc Slim Intel</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProduto1">Veja mais detelhes...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img src="img/televisao.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Televisão 40" LED Samsung</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Veja mais detelhes...</a>
+              </div>
+            </div> 
+          </div>
+          <div class="col-sm-4">
+            <div class="card">
+              <img src="img/ipadpro.jpg" class="card-img-top" alt="..." style="width: 350px;">
+              <div class="card-body">
+                <h5 class="card-title">iPad Pro</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Veja mais detelhes...</a>
+              </div>
+            </div>
+          </div> 
+      </div>
+  </section>
+     
+</section>
 
-        </div>
-    </section>
-    <section></section>
-</main>
+<section>
+<h2>Formulário de Contato</h2>
+<form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+  </section>
+  </main>
 <footer class="container-fluid">
-    <p> &copy; 2024 Loja de Eletrônicos</p>
-
-    
+    <p>&copy; 2024 Loja de Eletrônicos</p>
 </footer>
 
 
