--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
               <div class="card-body">
                 <h5 class="card-title">Pc Slim Intel</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProduto1">Veja mais detelhes...</a>
+                <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProduto1">Veja mais informações...</a>
               </div>
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="card">
-              <img src="img/televisao.jpg" class="card-img-top" alt="...">
+            <div class="card" style="height: 435px; width: 330px;">
+              <img src="img/televisao.jpg" class="card-img-top" alt="..." style="width: 250px; height: 250px; ">
               <div class="card-body">
                 <h5 class="card-title">Televisão 40" LED Samsung</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Veja mais detelhes...</a>
+                <a href="#" class="btn btn-primary">Veja mais informações...</a>
               </div>
             </div> 
           </div>
           <div class="col-sm-4">
-            <div class="card">
-              <img src="img/ipadpro.jpg" class="card-img-top" alt="..." style="width: 350px;">
+            <div class="card" style="width: 330px; height: 435px;">
+              <img src="img/images.jpeg" class="card-img-top" alt="..."  style="width: 300px; height: 250px;">
               <div class="card-body">
                 <h5 class="card-title">iPad Pro</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Veja mais detelhes...</a>
+                <a href="#" class="btn btn-primary">Veja mais informações...</a>
               </div>
             </div>
           </div> 
