--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <img src="img/computador.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Pc Slim Intel</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Computador Pc Slim Intel I5 8gb Ram Ssd 480gb Tela 19 Wifi.</p>
                 <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProduto1">Veja mais informações...</a>
               </div>
             </div>
@@ -51,7 +51,8 @@
               <img src="img/televisao.jpg" class="card-img-top" alt="..." style="width: 250px; height: 250px; ">
               <div class="card-body">
                 <h5 class="card-title">Televisão 40" LED Samsung</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Televisão 40" LED Samsung HB670 HG40NB670FGXZD
+                  </p>
                 <a href="#" class="btn btn-primary">Veja mais informações...</a>
               </div>
             </div> 
@@ -61,7 +62,7 @@
               <img src="img/images.jpeg" class="card-img-top" alt="..."  style="width: 300px; height: 250px;">
               <div class="card-body">
                 <h5 class="card-title">iPad Pro</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">iPad Pro M2 11" 256GB - 4ª geração, (2022)</p>
                 <a href="#" class="btn btn-primary">Veja mais informações...</a>
               </div>
             </div>
